fix: dynamic amount display on payment pages to support order bumps

--- a/stalkea_clone/pages/mbway-payment.html
+++ b/stalkea_clone/pages/mbway-payment.html
@@ -36,7 +36,7 @@
             <!-- Valor -->
             <div class="payment-value">
                 <span class="value-label">Valor a pagar</span>
-                <span class="value-amount">12,90€</span>
+                <span class="value-amount" id="mbwayAmount">12,90€</span>
             </div>
         </div>
 
@@ -69,7 +69,7 @@
                     </div>
                     <div class="step-content">
                         <h3>Confirma o pagamento</h3>
-                        <p>Verifica o valor de <strong>12,90€</strong> e confirma</p>
+                        <p>Verifica o valor de <strong id="stepAmount">12,90€</strong> e confirma</p>
                     </div>
                 </div>
 
