--- a/stalkea_clone/pages/multibanco-payment.html
+++ b/stalkea_clone/pages/multibanco-payment.html
@@ -69,7 +69,7 @@
 
                         <div class="receipt-row">
                             <span class="receipt-label">Montante:</span>
-                            <div class="receipt-value" style="color: #10B981;">12,90€</div>
+                            <div class="receipt-value" id="mbAmount" style="color: #10B981;">12,90€</div>
                         </div>
                     </div>
 
